// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FlatButton Snap should renders correctly 1`] = `
<button
  className="bt-flat bold-16"
  onClick={[Function]}
  title="Click to load"
  type="button"
>
  <span
    className="bt-flat__caption"
  >
    Load
  </span>
</button>
`;

exports[`FlatButton Snap should renders correctly without title 1`] = `
<button
  className="bt-flat bold-16"
  onClick={[Function]}
  type="button"
>
  <span
    className="bt-flat__caption"
  >
    Load
  </span>
</button>
`;
